--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "modernportfolio",
+  "name": "modern_portfolio",
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
+  "homepage": "https://bradtraversy.github.io/modern_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
-  "repository": {
-    "type": "git",
-    "url": "Shashank Yadav"
-  },
-  "author": "Shashank",
+  "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
-    "node-sass": "^4.12.0"
+    "gh-pages": "^1.2.0",
+    "node-sass": "^4.9.2"
   }
 }
